# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import contentRouter from "./content";
+import calendarRouter from "./calendar";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(contentRouter);
+router.use(calendarRouter);
 
 export default router;
